test/Fail/cohesion-module-telescope.err
cohesion-module-telescope.agda:16.19-25: error: [UnequalTypes]
The function type
  (@⊤ continuous : Unit) → Unit
is not a subtype of
  Unit → Unit
because:
  one has squashed domain, while the other is continuous.
when checking that the expression N.flat has type Unit → Unit
